tests/errors/multi_error_8.c
int x = 10;
float y = 5.5;

x = y * 2; // Type mismatch
z = x + 1; // Undeclared z

while (x != 0)
{
    x = x - 1
    if (x == 5)
    {
        y = y + 1.1;
    // Missing brace for if
// Missing brace for while
